# tersify

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  action.yml  install.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
Formula/: tersify.rb
docs/: automatic-mode.md  cli-reference.md  getting-started.md  index.md  languages.md  library.md  mcp-server.md
npm/: package.json
npm/scripts/: install.js
scripts/: create-homebrew-tap.sh
src/: bench.rs  cache.rs  cli.rs  completions.rs  config.rs  detect.rs  error.rs  hook.rs  input.rs  install.rs  lib.rs  main.rs  mcp.rs  stats.rs  token_cost.rs  tokens.rs
src/compress/: ast.rs  ast_ts.rs  code.rs  diff.rs  json.rs  logs.rs  mod.rs  smart.rs  text.rs  util.rs
