[package]
name = "tersify"
version = "0.4.1"
edition = "2024"
description = "Universal LLM context compressor — pipe anything, get token-optimized output"
license = "MIT"
repository = "https://github.com/rustkit-ai/tersify"
homepage = "https://github.com/rustkit-ai/tersify"
documentation = "https://docs.rs/tersify"
readme = "README.md"
keywords = ["llm", "context", "tokens", "compression", "ai"]
categories = ["command-line-utilities", "development-tools"]

[lib]
name = "tersify"
path = "src/lib.rs"

[[bin]]
name = "tersify"
path = "src/main.rs"

[dependencies]
anyhow = "1"
rayon = "1"
toml = "0.8"
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
is-terminal = "0.4"
regex-lite = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
walkdir = "2"
tree-sitter = "0.25"
tree-sitter-c = "0.24"
tree-sitter-cpp = "0.23"
tree-sitter-go = "0.25"
tree-sitter-java = "0.23"
tree-sitter-javascript = "0.25"
tree-sitter-python = "0.25"
tree-sitter-ruby = "0.23"
tree-sitter-rust = "0.24"
tree-sitter-typescript = "0.23"
tree-sitter-c-sharp = "0.23"
tree-sitter-php = "0.23"
tiktoken-rs = "0.6"
